--- a/shopify/snippets/fonts.liquid
+++ b/shopify/snippets/fonts.liquid
@@ -16,7 +16,7 @@
 
     font-weight: 400;
     src: local('Futura PT'),
-      url("{{ 'FuturaPT-Demi.otf' | asset_url }}")
+      url("{{ 'FuturaPT-Demi.static.otf' | asset_url }}")
         format('opentype');
   }
 {% endstyle %}
